* Performance tuning. * Added DatabaseTableMetaData.

--- a/profile.properties
+++ b/profile.properties
@@ -2,8 +2,8 @@
 ##
 ##
 
-#dbunit.profile = hypersonic
-dbunit.profile = oracle
+dbunit.profile = hypersonic
+#dbunit.profile = oracle
 #dbunit.profile = mysql
 
 # dbunit.profile.{profileName}.driverClass = com.acme.driver
