--- a/profile.properties
+++ b/profile.properties
@@ -2,8 +2,8 @@
 ##
 ##
 
-dbunit.profile = hypersonic
-#dbunit.profile = oracle
+#dbunit.profile = hypersonic
+dbunit.profile = oracle
 #dbunit.profile = mysql
 
 # dbunit.profile.{profileName}.driverClass = com.acme.driver
@@ -18,18 +18,19 @@ dbunit.profile.hypersonic.connectionUrl = jdbc:hsqldb:.
 #dbunit.profile.hypersonic.schema =
 dbunit.profile.hypersonic.user = sa
 dbunit.profile.hypersonic.password =
-dbunit.profile.hypersonic.primaryKey = single
+#dbunit.profile.hypersonic.primaryKey = single
 
 dbunit.profile.oracle.driverClass = oracle.jdbc.driver.OracleDriver
 dbunit.profile.oracle.connectionUrl = jdbc:oracle:thin:@demowin:1521:demowin
 dbunit.profile.oracle.schema = DBUNIT
 dbunit.profile.oracle.user = dbunit
 dbunit.profile.oracle.password = dbunit
-dbunit.profile.oracle.primaryKey = multiple
+#dbunit.profile.oracle.primaryKey = multiple
 
 dbunit.profile.mysql.driverClass = org.gjt.mm.mysql.Driver
-dbunit.profile.mysql.connectionUrl = jdbc:mysql://mysql.sourceforge.net/dbunit
+dbunit.profile.mysql.connectionUrl = jdbc:mysql://localhost:3306/dbunit
 #dbunit.profile.mysql.schema = DBUNIT
 dbunit.profile.mysql.user = dbunit
-dbunit.profile.mysql.password = qwerty
-dbunit.profile.mysql.primaryKey = multiple
+dbunit.profile.mysql.password = dbunit
+#dbunit.profile.mysql.primaryKey = multiple
+
