* Last minute updates before version 1.2.

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,5 @@
 name = dbunit
-Name = The dbUnit database testing framework
+Name = The Dbunit Database Testing Framework
 junit.testsuite = org.dbunit.AllTests
+
 
