Enabled PreparedStatement support

--- a/profile.properties
+++ b/profile.properties
@@ -31,8 +31,9 @@ dbunit.profile.mysql.driverClass = org.gjt.mm.mysql.Driver
 dbunit.profile.mysql.connectionUrl = jdbc:mysql://localhost:3306/dbunit
 #dbunit.profile.mysql.schema = DBUNIT
 dbunit.profile.mysql.user = dbunit
-dbunit.profile.mysql.password = dbunit
+dbunit.profile.mysql.password = 12345
 #dbunit.profile.mysql.primaryKey = multiple
+
 
 
 
