Added support for BLOB and CLOB.

--- a/profile.properties
+++ b/profile.properties
@@ -2,9 +2,10 @@
 ##
 ##
 
-dbunit.profile = hypersonic
-#dbunit.profile = oracle
+#dbunit.profile = hypersonic
+dbunit.profile = oracle
 #dbunit.profile = mysql
+#dbunit.profile = antoine
 
 # dbunit.profile.{profileName}.driverClass = com.acme.driver
 # dbunit.profile.{profileName}.connectionUrl = jdbc:acme:database
@@ -27,12 +28,20 @@ dbunit.profile.oracle.user = dbunit
 dbunit.profile.oracle.password = dbunit
 #dbunit.profile.oracle.primaryKey = multiple
 
+dbunit.profile.antoine.driverClass = oracle.jdbc.driver.OracleDriver
+dbunit.profile.antoine.connectionUrl = jdbc:oracle:thin:@demowin:1521:demowin
+dbunit.profile.antoine.schema = ANTOINE
+dbunit.profile.antoine.user = antoine
+dbunit.profile.antoine.password = antoine
+#dbunit.profile.antoine.primaryKey = multiple
+
 dbunit.profile.mysql.driverClass = org.gjt.mm.mysql.Driver
 dbunit.profile.mysql.connectionUrl = jdbc:mysql://localhost:3306/dbunit
 #dbunit.profile.mysql.schema = DBUNIT
 dbunit.profile.mysql.user = dbunit
 dbunit.profile.mysql.password = dbunit
 #dbunit.profile.mysql.primaryKey = multiple
+
 
 
 
