Added necessary elements for ant testing for now.

--- a/profile.properties
+++ b/profile.properties
@@ -38,20 +38,14 @@ dbunit.profile.antoine.password = antoine
 dbunit.profile.mysql.driverClass = org.gjt.mm.mysql.Driver
 dbunit.profile.mysql.connectionUrl = jdbc:mysql://localhost:3306/dbunit
 #dbunit.profile.mysql.schema = DBUNIT
-dbunit.profile.mysql.user = dbunit
-dbunit.profile.mysql.password = dbunit
+dbunit.profile.mysql.user = root
+dbunit.profile.mysql.password = 
 #dbunit.profile.mysql.primaryKey = multiple
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+## Needed for ant testing until profile.properties is merged
+dbunit.profile.driverClass = ${dbunit.profile.mysql.driverClass}
+dbunit.profile.connectionUrl = ${dbunit.profile.mysql.connectionUrl}
+#dbunit.profile.schema = ${dbunit.profile.mysql.schema}
+dbunit.profile.user = ${dbunit.profile.mysql.user}
+dbunit.profile.password = ${dbunit.profile.mysql.password}
+#dbunit.profile.primaryKey = ${dbunit.profile.mysql.primaryKey}
