Added new profile for MS Sql Server

--- a/profile.properties
+++ b/profile.properties
@@ -6,6 +6,7 @@ dbunit.profile = hypersonic
 #dbunit.profile = oracle
 #dbunit.profile = mysql
 #dbunit.profile = antoine
+#dbunit.profile = mssql
 
 # dbunit.profile.{profileName}.driverClass = com.acme.driver
 # dbunit.profile.{profileName}.connectionUrl = jdbc:acme:database
@@ -37,10 +38,24 @@ dbunit.profile.mysql.connectionUrl = jdbc:mysql://localhost:3306/dbunit
 dbunit.profile.mysql.user = root
 dbunit.profile.mysql.password = 
 
+dbunit.profile.mssql.driverClass = com.microsoft.jdbc.sqlserver.SQLServerDriver
+dbunit.profile.mssql.connectionUrl = jdbc:microsoft:sqlserver://trujillo:1433;DatabaseName=dbunit;SelectMethod=cursor
+dbunit.profile.mssql.schema = dbo
+dbunit.profile.mssql.user = dbunit
+dbunit.profile.mssql.password = dbunit
+
 ## Needed for ant testing until profile.properties is merged
 dbunit.profile.driverClass = ${dbunit.profile.hypersonic.driverClass}
 dbunit.profile.connectionUrl = ${dbunit.profile.hypersonic.connectionUrl}
 #dbunit.profile.schema = ${dbunit.profile.hypersonic.schema}
 dbunit.profile.user = ${dbunit.profile.hypersonic.user}
 dbunit.profile.password = ${dbunit.profile.hypersonic.password}
+
+#dbunit.profile.driverClass = ${dbunit.profile.mssql.driverClass}
+#dbunit.profile.connectionUrl = ${dbunit.profile.mssql.connectionUrl}
+##dbunit.profile.schema = ${dbunit.profile.mssql.schema}
+#dbunit.profile.user = ${dbunit.profile.mssql.user}
+#dbunit.profile.password = ${dbunit.profile.mssql.password}
+
+
 
