* Test suite cleanup. Added new "unsupportedFeatures" property in profile.properties file. Used to exclude tests of unsupported database features. No more instanceof in tests.
* New ForwardOnlyResultSetTable class. Renamed ResultSetTable to
ScrollableResultSetTable. Another step toward support of very large
datasets; remains to implement buffered XML datasets.

* New ForwardOnlyDataSet and ForwardOnlyTable classes. Will be used
in test suite only to ensure that insert and export works with buffered
dataset/table implementations.

--- a/profile.properties
+++ b/profile.properties
@@ -2,40 +2,46 @@
 ##
 ##
 
-dbunit.profile = hypersonic
+#dbunit.profile = hypersonic
 #dbunit.profile = oracle
 #dbunit.profile = mysql
-#dbunit.profile = mssql
+dbunit.profile = mssql
 
 # dbunit.profile.{profileName}.driverClass = com.acme.driver
 # dbunit.profile.{profileName}.connectionUrl = jdbc:acme:database
 # dbunit.profile.{profileName}.schema =
 # dbunit.profile.{profileName}.user =
 # dbunit.profile.{profileName}.password =
+# dbunit.profile.{profileName}.unsupportedFeatures = BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_INDENTITY
 
 dbunit.profile.hypersonic.driverClass = org.hsqldb.jdbcDriver
 dbunit.profile.hypersonic.connectionUrl = jdbc:hsqldb:.
 #dbunit.profile.hypersonic.schema =
 dbunit.profile.hypersonic.user = sa
 dbunit.profile.hypersonic.password =
+dbunit.profile.hypersonic.unsupportedFeatures = BLOB,CLOB,SCOLLABLE_RESULTSET,INSERT_IDENTITY
 
 dbunit.profile.oracle.driverClass = oracle.jdbc.driver.OracleDriver
 dbunit.profile.oracle.connectionUrl = jdbc:oracle:thin:@demowin:1521:demowin
 dbunit.profile.oracle.schema = DBUNIT
 dbunit.profile.oracle.user = dbunit
 dbunit.profile.oracle.password = dbunit
+dbunit.profile.oracle.unsupportedFeatures = INSERT_INDENTITY
 
 dbunit.profile.mysql.driverClass = com.mysql.jdbc.Driver
 dbunit.profile.mysql.connectionUrl = jdbc:mysql://localhost:3306/dbunit
 #dbunit.profile.mysql.schema = DBUNIT
 dbunit.profile.mysql.user = dbunit
 dbunit.profile.mysql.password = dbunit
+dbunit.profile.mysql.unsupportedFeatures = BLOB,CLOB,TRANSACTION,INSERT_IDENTITY
 
 dbunit.profile.mssql.driverClass = com.microsoft.jdbc.sqlserver.SQLServerDriver
-dbunit.profile.mssql.connectionUrl = jdbc:microsoft:sqlserver://trujillo:1433;DatabaseName=dbunit;SelectMethod=cursor
+#dbunit.profile.mssql.connectionUrl = jdbc:microsoft:sqlserver://trujillo:1433;DatabaseName=dbunit;SelectMethod=cursor
+dbunit.profile.mssql.connectionUrl = jdbc:microsoft:sqlserver://localhost\\dbunit:1433;DatabaseName=dbunit;SelectMethod=cursor
 dbunit.profile.mssql.schema = dbo
 dbunit.profile.mssql.user = dbunit
 dbunit.profile.mssql.password = dbunit
+dbunit.profile.mssql.unsupportedFeatures = BLOB,CLOB,SCOLLABLE_RESULTSET
 
 ## Needed for ant testing until profile.properties is merged
 dbunit.profile.driverClass = ${dbunit.profile.hypersonic.driverClass}
@@ -50,11 +56,8 @@ dbunit.profile.password = ${dbunit.profile.hypersonic.password}
 #dbunit.profile.user = ${dbunit.profile.mysql.user}
 #dbunit.profile.password = ${dbunit.profile.mysql.password}
 
-#dbunit.profile.driverClass = ${dbunit.profile.mssql.driverClass}
-#dbunit.profile.connectionUrl = ${dbunit.profile.mssql.connectionUrl}
-##dbunit.profile.schema = ${dbunit.profile.mssql.schema}
-#dbunit.profile.user = ${dbunit.profile.mssql.user}
-#dbunit.profile.password = ${dbunit.profile.mssql.password}
-
-
-
+dbunit.profile.driverClass = ${dbunit.profile.mssql.driverClass}
+dbunit.profile.connectionUrl = ${dbunit.profile.mssql.connectionUrl}
+#dbunit.profile.schema = ${dbunit.profile.mssql.schema}
+dbunit.profile.user = ${dbunit.profile.mssql.user}
+dbunit.profile.password = ${dbunit.profile.mssql.password}
