Added TRUNCATE_TABLE as unsupported feature to Hypersonic profile.

--- a/profile.properties
+++ b/profile.properties
@@ -2,24 +2,24 @@
 ##
 ##
 
-#dbunit.profile = hypersonic
+dbunit.profile = hypersonic
 #dbunit.profile = oracle
 #dbunit.profile = mysql
-dbunit.profile = mssql
+#dbunit.profile = mssql
 
 # dbunit.profile.{profileName}.driverClass = com.acme.driver
 # dbunit.profile.{profileName}.connectionUrl = jdbc:acme:database
 # dbunit.profile.{profileName}.schema =
 # dbunit.profile.{profileName}.user =
 # dbunit.profile.{profileName}.password =
-# dbunit.profile.{profileName}.unsupportedFeatures = BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_INDENTITY
+# dbunit.profile.{profileName}.unsupportedFeatures = BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_INDENTITY,TRUNCATE_TABLE
 
 dbunit.profile.hypersonic.driverClass = org.hsqldb.jdbcDriver
 dbunit.profile.hypersonic.connectionUrl = jdbc:hsqldb:.
 #dbunit.profile.hypersonic.schema =
 dbunit.profile.hypersonic.user = sa
 dbunit.profile.hypersonic.password =
-dbunit.profile.hypersonic.unsupportedFeatures = BLOB,CLOB,SCOLLABLE_RESULTSET,INSERT_IDENTITY
+dbunit.profile.hypersonic.unsupportedFeatures = BLOB,CLOB,SCOLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
 
 dbunit.profile.oracle.driverClass = oracle.jdbc.driver.OracleDriver
 dbunit.profile.oracle.connectionUrl = jdbc:oracle:thin:@demowin:1521:demowin
@@ -56,8 +56,8 @@ dbunit.profile.password = ${dbunit.profile.hypersonic.password}
 #dbunit.profile.user = ${dbunit.profile.mysql.user}
 #dbunit.profile.password = ${dbunit.profile.mysql.password}
 
-dbunit.profile.driverClass = ${dbunit.profile.mssql.driverClass}
-dbunit.profile.connectionUrl = ${dbunit.profile.mssql.connectionUrl}
+#dbunit.profile.driverClass = ${dbunit.profile.mssql.driverClass}
+#dbunit.profile.connectionUrl = ${dbunit.profile.mssql.connectionUrl}
 #dbunit.profile.schema = ${dbunit.profile.mssql.schema}
-dbunit.profile.user = ${dbunit.profile.mssql.user}
-dbunit.profile.password = ${dbunit.profile.mssql.password}
+#dbunit.profile.user = ${dbunit.profile.mssql.user}
+#dbunit.profile.password = ${dbunit.profile.mssql.password}
