--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
     DbUnit is a JUnit extension targeted for database-driven projects
   </shortDescription>
 -->
-<!-- TODO: add SCM info so it can be built by Maven Continuum -->
   <inceptionYear>2002</inceptionYear>
   <description>
     DbUnit is a JUnit extension (also usable from Ant) targeted for database-driven projects that, 
@@ -29,6 +28,13 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
+  <scm> 
+    <connection>scm:cvs:pserver:anonymous@dbunit.cvs.sourceforge.net:/cvsroot/dbunit:dbunit</connection>
+<!-- TODO: set it...
+    <developerConnection>scm:cvs:ext:${maven.username}@cvs.sourceforge.net:/cvsroot/dbunit:dbunit</developerConnection>
+-->
+    <url>http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/dbunit/dbunit</url>
+  </scm>
   <mailingLists>
     <mailingList>
       <name>DbUnit User List</name>
@@ -270,12 +276,47 @@
         </configuration>
       </plugin>
 <!-- TODO: add java compiler and set it to jdk 1.3 -->
-
+<!-- TODO: add cobertura and other plugins that would fail the build, like PMD, cobertura and checkstyle-->
     </plugins>
-
   </build>
 
-<!-- TODO: add reports -->
+<!-- TODO: move reports to other profile -->
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+<!-- TODO: remove
+        <version>2.0-SNAPSHOT</version>
+-->
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>changes-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>changelog-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </reporting>
+
   <profiles>
     <profile>
       <id>official</id>
