--- a/profile.properties
+++ b/profile.properties
@@ -16,8 +16,8 @@ dbunit.profile = hypersonic
 # dbunit.profile.{profileName}.unsupportedFeatures = BLOB,CLOB,TRANSACTION,SCOLLABLE_RESULTSET,INSERT_INDENTITY,TRUNCATE_TABLE
 
 dbunit.profile.hypersonic.driverClass = org.hsqldb.jdbcDriver
-dbunit.profile.hypersonic.connectionUrl = jdbc:hsqldb:.
-#dbunit.profile.hypersonic.schema =
+dbunit.profile.hypersonic.connectionUrl = jdbc:hsqldb:mem:.
+dbunit.profile.hypersonic.schema = PUBLIC
 dbunit.profile.hypersonic.user = sa
 dbunit.profile.hypersonic.password =
 dbunit.profile.hypersonic.unsupportedFeatures = BLOB,CLOB,SCOLLABLE_RESULTSET,INSERT_IDENTITY,TRUNCATE_TABLE
