--- a/pom.xml
+++ b/pom.xml
@@ -119,43 +119,40 @@
   <contributors>
     <contributor>
       <name>Klas Axel</name>
-       <!--  
       <roles>
         <role>HsqldbDataTypeFactory</role>
       </roles>
-      -->
     </contributor>  
     <contributor>
       <name>Erik Price</name>
-       <!--  
       <roles>
         <role>DatabaseSequenceOperation</role>
       </roles>
-      -->
     </contributor>
     <contributor>
       <name>Jeremy Stein</name>
-       <!--  
       <roles>
         <role>InsertIndentityOperation</role>
       </roles>
-      -->
     </contributor>
     <contributor>
       <name>Keven Kizer</name>
-       <!--  
       <roles>
         <role>Early guinea pig</role>
       </roles>
-      -->
     </contributor>
     <contributor>
       <name>Mike Bresnahan</name>
-       <!--  
       <roles>
         <role>DbUnit evangelist</role>
       </roles>
-      -->
+    </contributor>
+    <contributor>
+      <name>Andres Almiray</name>
+      <email>aalmiray@users.sourceforge.net</email>
+      <roles>
+        <role>IDatabaseTester creator</role>
+      </roles>
     </contributor>
   </contributors>
 
