--- a/pom.xml
+++ b/pom.xml
@@ -341,9 +341,6 @@ AllTests)
   <profiles>
     <profile>
       <id>official</id>
-      <activation>
-         <jdk>1.3</jdk>
-      </activation>
       <dependencies>
         <dependency>
           <groupId>javax.sql</groupId>
@@ -352,6 +349,22 @@ AllTests)
           <optional>true</optional>
         </dependency>       
       </dependencies>
+     <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                <fork>true</fork>
+                <compilerVersion>1.3</compilerVersion>
+                <executable>${JAVA_1_3_HOME}/bin/javac</executable>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+     </build>
+
   <reporting>
     <plugins>
       <plugin>
